# academic-chatgpt

./: .babelrc  .gitignore  Cargo.toml  LICENSE  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yaml
assets/scss/: _antd-dark.scss  antd.scss  app.scss  tailwind.scss
components/: CharacterAvatar.vue  ChatConversation.vue  ChatMessage.vue  ChatSession.vue  ChatSessions.vue  CollectionManageIndexes.vue  CollectionManageMain.vue  ColorModeToggleIcon.vue  CreateEmbeddingsConfig.vue  CreateIndexConfig.vue  CreateIndexProfile.vue  CreateVectorDbConfig.vue  FileSelector.vue  LogConsole.vue  PreviewCollectionIndex.vue  QuickConfigCompletion.vue  QuickConfigPinecone.vue  SelectEmbeddingsConfig.vue  SelectIndexConfig.vue  SelectOrCreate.vue  SelectOrCreateEmbeddingsClient.vue  SelectOrCreateEmbeddingsConfig.vue  SelectOrCreateVectorDbClient.vue  SelectOrCreateVectorDbConfig.vue  SideCollectionTree.vue  TraceBar.vue
composables/: UseTauriFetch.ts  tauri_fetch.ts  useConfirmDeleteCollection.ts  useHash.ts  useKeyRespectKeymap.ts  useScrollOverflow.ts  useTauriFetch.ts
composables/beans/: Chats.ts
content/: index.md
modules/: antd.ts
pages/: default.vue  index.vue  main.vue  manage.vue  presets.vue
pages/main/: chat.vue
pages/main/collections/: create.vue  index.vue
pages/main/collections/[id]/: index.vue  manage.vue
pages/main/collections/[id]/indexes/: create.vue  index.vue  manage.vue
pages/main/collections/[id]/indexes/[index-id]/: index.vue  sessions.vue
pages/manage/collections/: [id].vue  create.vue
pages/manage/collections/[id]/indexes/: create.vue
plugins/: antd.ts  localstore.ts  markdownd.ts  pdfjs.ts  tauri.ts
plugins/tauri/: aheadinjection.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/prisma/: schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20230423124404_init/: migration.sql
src-tauri/prisma/migrations/20230428092014_enable_on_delete/: migration.sql
src-tauri/src/: lib.rs  main.rs  prisma.rs
src-tauri/src/commands/: db_api.rs  fs.rs  mod.rs  process_documents.rs
src-tauri/src/commands/db/: collection_indexes.rs  collections.rs  collections_on_documents.rs  document_chunks.rs  documents.rs  embedding_vectors.rs  embeddings_clients.rs  embeddings_configs.rs  index_profiles.rs  mod.rs  sessions.rs  splittings.rs  vector_db_clients.rs  vector_db_configs.rs
src-tauri/src/core/: fs.rs  http_invoke.rs  mod.rs  result.rs
store/: appSettingsStore.ts  collections.ts  defaultAI.ts  defaultComplete.ts  defaultEmbeddings.ts  defaultVectorDb.ts  indexProfiles.ts  sessions.ts
types/: index.ts
utils/: completionChains.ts  db.ts  documentLoaders.ts  documents_loaders.ts  dummy.ts  embeddings.ts  indexSyncStatus.ts  indexTracer.ts  index_profiles.ts  indexer.ts  itertools.ts  objects.ts  pinecone.ts  qachain.ts  serde.ts  strings.ts  tauri.ts  tracer.ts  validates.ts  vectorstores.ts
utils/aichains/: chatCompletion.ts  completion.ts  noHistoryVectorDbQA.ts  rephraseVectorDbQA.ts
utils/collectionSummarizers/: base.ts  basic.ts
utils/documentLoaders/: base.ts  bytes.ts  factory.ts  markdown.ts  pdf.ts  text.ts
utils/documentOpeners/: bytes.ts  text.ts
utils/documentSummarizers/: base.ts  bytes.ts  factory.ts  markdown.ts  pdf.ts  text.ts
(+3 files in other folders)
